...
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_event_waiting_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Waiting List" />

        <!-- Map Fragment -->
        <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
...
