...
                android:layout_height="wrap_content"
                android:background="@drawable/white_square_background"
                android:orientation="vertical">

                <!-- Facility Name -->
                <EditText
                    android:id="@+id/facilityNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Facility Name"
                    android:inputType="textPersonName" />

                <!-- Facility Address -->
...
