...
                        android:text=" *"
                        android:textSize="16sp"
                        android:textColor="#FF0000" /> <!-- Red Asterisk -->
                </LinearLayout>

                <EditText
                    android:id="@+id/eventNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:background="@android:drawable/edit_text" />

...
